--- a/presentation_report/thesis/chapter05.tex
+++ b/presentation_report/thesis/chapter05.tex
@@ -7,6 +7,17 @@
 
 %  for interpretation see pearl book 2009 p. 366. the key is to say leaving all other variables "untouched" and not "constant". he also talks about the connection to the do-operator.
 
+ignorability alone is not sufficient for the estimation of individual effects;
+
+% - Maybe a good conclusion: because this problematic with missing effect modifiers in RCT data can be a motivation to work with observational data where the dag is very detailed specified with all confounders and interactions, then a tram-dag can be applied. However, there we also have the problem, that important variables are probably also not known/measured...
+
+
+%  i think nichols2007 (or maybe the one russian with IV and QTE). stated that while structural causal models provide  the full picture, approaches that aim to estimate treatment effects by sole conditioning/controling for certain variables only look at a very isolated part in the system. this could be an argument for TRAM-DAGs
+
+
+we answered the four research questions posed in the introduction. We showed tram dags capabilities and how it works with ordinal predictors (appendix), how it models interactions (appendix, experiment 2 and 4).. 
+refer to all 4 reseatch questions briefely to show accomplishements.
+
 
 The poor performance in the IST dataset was likely due to true weak heterogeneity or due to unobserved variables. We come to this conclusion because of our simulations in experiment 3 that revealed these possible problems.
 
